# bfcl-liquid-public

berkeley-function-call-leaderboard/: SUPPORTED_MODELS.md  pyproject.toml
berkeley-function-call-leaderboard/bfcl_eval/constants/: model_config.py  supported_models.py
berkeley-function-call-leaderboard/bfcl_eval/model_handler/api_inference/: liquid_api.py
berkeley-function-call-leaderboard/bfcl_eval/model_handler/local_inference/: lfm2.py
