[build-system]
requires = ["setuptools>=61.0", "wheel", "build", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bfcl_eval"
dynamic = ["version"]
description = "Berkeley Function Calling Leaderboard (BFCL)"
authors = [
    { name = "Huanzhi Mao", email = "huanzhimao@eecs.berkeley.edu" },
    { name = "Shishir Patil", email = "shishirpatil@eecs.berkeley.edu" },
    { name = "Sky Computing Lab", email = "sky@cs.berkeley.edu" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { "text" = "Apache 2.0" }
dependencies = [
    "requests==2.33.1",
    "tqdm==4.67.3",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "huggingface_hub==1.13.0",
    "pydantic==2.13.3",
    "python-dotenv==1.2.2",
    "tree_sitter==0.21.3",
    "tree-sitter-java==0.21.0",
    "tree-sitter-javascript==0.21.4",
    "openai==2.33.0",
    "mistralai==1.7.0",
    "anthropic==0.97.0",
    "cohere==5.18.0",
    "typer==0.25.0",
    "tabulate==0.10.0",
    "datamodel-code-generator==0.25.7",
    "google-genai==1.24.0",
    "qwen-agent==0.0.34",
    "mpmath==1.3.0",
    "tenacity==8.5.0",
    "writer-sdk==2.4.0",
    "overrides==7.7.0",
    "boto3==1.43.0",
    "beautifulsoup4==4.14.3",
    "html2text==2025.4.15",
    "rank_bm25==0.2.2",
    "google-search-results==2.4.2",
    "sentence-transformers==5.4.1",
    "faiss-cpu==1.11.0",
    "networkx==3.3",
    "filelock==3.20.0"
]

[project.scripts]
bfcl = "bfcl_eval.__main__:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bfcl_eval*"]

[tool.setuptools.package-data]
"bfcl_eval" = [
    "data/**/*",
    "scripts/*.py",
    "./test_case_ids_to_generate.json",
    "./.env.example",
    "*.md",
]

[project.urls]
Repository = "https://github.com/ShishirPatil/gorilla/tree/main/berkeley-function-call-leaderboard"

[project.optional-dependencies]
oss_eval_vllm = ["vllm==0.19.1"]
oss_eval_sglang = ["sglang[all]"]
wandb = ["wandb==0.18.5"]

[tool.setuptools_scm]
tag_regex = '^v(?P<version>[0-9]{4}\.[0-9]{2}\.[0-9]{2}(?:\.[0-9]+)?)$'
fallback_version = "0.0.0.dev0"
